# 42sh

./: CMakeLists.txt  Makefile  author
ft_printf/: Makefile
ft_printf/includes/: ft_pft.h  ft_printf.h
ft_printf/src/: ft_atoi.c  ft_printf.c  ft_strcmp.c  gets.c  prints.c  processing.c  puts.c
headers/: get_next_line.h  minishell.h  structs.h
srcs/builtins/: bltn_cd.c  bltn_echo.c  bltn_exit.c  bltn_pwd.c  bltn_setenv.c  bltn_unset.c
srcs/env/: assemble_env.c  create_env_instance.c  get_env_var.c  init_env.c  parse_env_var.c  print_env.c  update_env.c
srcs/exec/: aggreg.c  check_redirs.c  exec.c  exec_loop.c
srcs/main/: main.c
srcs/parsing/: aggro.c  assemble_tokens_to_cmds.c  check_redir.c  multiline_cmd.c  parse_quotes.c  parse_token.c  parse_utils.c  push.c  validation.c
srcs/path/: get_path.c  path_utils.c
srcs/queue/: join_queue.c  pop.c  pop_front.c  push_back.c
srcs/utils/: errors.c  free.c  ft_is_export.c  ft_is_sep_cmd.c  ft_isspace.c  ft_itoa.c  ft_malloc.c  ft_skip_spaces.c  ft_split.c  ft_strcmp.c  ft_strdup.c  ft_strequ.c  ft_strjoin_tripple.c  ft_strlen_shell.c  ft_strnstr.c  get_next_line.c  get_next_line_utils.c  init.c  is_number.c  show_promt.c  signals.c  starts_with.c  two_d_array.c
